--- a/FOSDEM/2015/Makefile.subdir
+++ b/FOSDEM/2015/Makefile.subdir
@@ -10,12 +10,12 @@ index.html:
 	mv $@.new $@
 
 txts: index.html
-	for i in `grep 'href=".[^"]*"' $< | cut -f 6 -d '"' | grep txt`; do \
+	for i in `grep 'td><a href=".[^"]*"' $< | cut -f 2 -d '"' | grep txt`; do \
 	  [ -e $$i ] || wget $(BASEURL)/$(SUBDIR)/$$i; \
 	done
 
 mp4s: index.html
-	for i in `grep 'href=".[^"]*"' $< | cut -f 6 -d '"' | grep mp4`; do \
+	for i in `grep 'href=".[^"]*"' $< | cut -f 2 -d '"' | grep mp4 | sed -e 's/%3A/:/g'`; do \
 	  [ -h $$i ] || git annex addurl --fast $(BASEURL)/$(SUBDIR)/$$i --file $$i; \
 	done
 
