FOSDEM/2014: Makefiles: ignore generated Makefiles, correct scraping of subdirs

--- a/FOSDEM/2014/Makefile
+++ b/FOSDEM/2014/Makefile
@@ -10,9 +10,9 @@ all: makedirs dirs
 makedirs: index.html
 	for i in `grep 'td><a href=".[^"]*/"' $< | cut -f 2 -d '"'`; do \
 	  [ -e $$i ] || mkdir $$i; \
-	  [ -h $$i/Makefile ] || \
+	  [ -h $$i/Makefile.generated ] || \
             [ $$i == ../ ] || \
-            ln -s ../Makefile.subdir $$i/Makefile && \
+            ln -s ../Makefile.subdir $$i/Makefile.generated && \
 	    touch Makefile.timestamp; \
 	done
 
@@ -20,12 +20,12 @@ PHONY =
 
 define DIR_template
 $(1):
-	make -C $(1)
+	make -f Makefile.generated -C $(1)
 
 PHONY += $(1)
 endef
 
-DIRS = $(patsubst %/Makefile,%,$(wildcard */Makefile))
+DIRS = $(patsubst %/Makefile.generated,%,$(wildcard */Makefile.generated))
 $(info $(DIRS))
 
 $(foreach dir,$(DIRS),$(eval $(call DIR_template, $(dir))))
